--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
     <!--Swiper-->
     <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" -->
-/>
+    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" -->/>
     <!-- custom css-->
     <link rel="stylesheet" href="css/style.css">
     <title>Responsive Job Portal Website</title>
